--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows:0.4fr 3fr;
+  grid-template-areas: 
+  "header header" 
+  "sidebar content";
+  margin-top: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  grid-area: header; 
+  width: 100%;
+  height: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* .containseccond{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: nowrap;
+} */
+
+.sidebar {
+  grid-area: sidebar; /* Refers to the sidebar area */
+  border: 1px solid black;
+  width: 100%;
+  height: auto;
+}
+
+.content {
+  grid-area: content; /* Refers to the content area */
+  display: flex;
+  border: 1px solid rgb(255, 0, 0);
+  width: 100%;
+  height: auto;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
