--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows:0.4fr 3fr;
-  grid-template-areas: 
-  "header header" 
-  "sidebar content";
-  margin-top: 10px;
+  grid-template-columns: 0.3fr 1fr;
+  grid-template-rows: 0.4fr 3fr;
+  grid-template-areas:
+    "header header"
+    "sidebar content";
+    background-image: url(./inggrid-koe-kbKEuU-YEIw-unsplash\ 1.png);
+    background-size:cover;
+  /* background: rgb(236, 243, 251); */
+  /* background: radial-gradient(circle, rgba(87,105,207,1) 49%, rgba(255,46,138,1) 100%); */
 }
 
 .header {
-  grid-area: header; 
+  grid-area: header;
   width: 100%;
   height: auto;
 }
@@ -22,7 +25,7 @@
 
 .sidebar {
   grid-area: sidebar; /* Refers to the sidebar area */
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 100%;
   height: auto;
 }
@@ -30,9 +33,21 @@
 .content {
   grid-area: content; /* Refers to the content area */
   display: flex;
-  border: 1px solid rgb(255, 0, 0);
-  width: 100%;
   height: auto;
   align-items: center;
   justify-content: center;
 }
+.containbutton {
+  display: flex;
+  width: 90%; /* Adjust this if you want to specify a width other than 100% */
+  height: 200px; /* Set the height to your desired value */
+  align-items: center;
+  border: 0px solid black; /* Increased border width */
+  justify-content: center;
+  background-color: rgb(255, 255, 255,0.4);
+  border-radius: 10px; /* Adjust if needed for rounded corners */
+  box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
+
+}
+
+
